@@ -14,6 +14,8 @@ examples/check_code_ok.pl
 examples/check_isa_fail.pl
 examples/check_isa_ok.pl
 examples/check_length_fail.pl
+examples/check_length_fix_fail.pl
+examples/check_length_fix_ok.pl
 examples/check_length_ok.pl
 examples/check_number_fail.pl
 examples/check_number_of_items_fail.pl
@@ -54,12 +56,13 @@ t/Mo-utils/07-check_bool.t
 t/Mo-utils/08-check_code.t
 t/Mo-utils/09-check_isa.t
 t/Mo-utils/10-check_length.t
-t/Mo-utils/11-check_number.t
-t/Mo-utils/12-check_number_of_items.t
-t/Mo-utils/13-check_regexp.t
-t/Mo-utils/14-check_required.t
-t/Mo-utils/15-check_string_begin.t
-t/Mo-utils/16-check_strings.t
+t/Mo-utils/11-check_length_fix.t
+t/Mo-utils/12-check_number.t
+t/Mo-utils/13-check_number_of_items.t
+t/Mo-utils/14-check_regexp.t
+t/Mo-utils/15-check_required.t
+t/Mo-utils/16-check_string_begin.t
+t/Mo-utils/17-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
