@@ -15,6 +15,7 @@ SYNOPSIS
      check_code($self, $key);
      check_isa($self, $key, $class);
      check_length($self, $key, $max_length);
+     check_length_fix($self, $key, $length);
      check_number($self, $key);
      check_number_of_items($self, $list_method, $item_method, $object_name, $item_name);
      check_regexp($self, $key, $regexp);
@@ -113,6 +114,18 @@ SUBROUTINES
 
     Check length of value for parameter defined by $key. Maximum length is
     defined by $max_length.
+
+    Put error if check isn't ok.
+
+    Returns undef.
+
+  "check_length_fix"
+     check_length_fix($self, $key, $length);
+
+    *Since version 0.22.*
+
+    Check fixed length of value for parameter defined by $key. Length is
+    defined by $length variable.
 
     Put error if check isn't ok.
 
@@ -233,6 +246,10 @@ ERRORS
 
      check_length():
              Parameter '%s' has length greater than '%s'.
+                     Value: %s
+
+     check_length_fix():
+             Parameter '%s' has length different than '%s'.
                      Value: %s
 
      check_number():
@@ -572,6 +589,44 @@ EXAMPLE17
      use strict;
      use warnings;
 
+     $Error::Pure::TYPE = 'Error';
+
+     use Mo::utils qw(check_length_fix);
+
+     my $self = {
+             'key' => 'foo',
+     };
+     check_length_fix($self, 'key', 3);
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # ok
+
+EXAMPLE18
+     use strict;
+     use warnings;
+
+     $Error::Pure::TYPE = 'Error';
+
+     use Mo::utils qw(check_length_fix);
+
+     my $self = {
+             'key' => 'foo',
+     };
+     check_length_fix($self, 'key', 4);
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # #Error [...utils.pm:?] Parameter 'key' has length different than '4'.
+
+EXAMPLE19
+     use strict;
+     use warnings;
+
      use Mo::utils qw(check_number);
 
      my $self = {
@@ -585,7 +640,7 @@ EXAMPLE17
      # Output:
      # ok
 
-EXAMPLE18
+EXAMPLE20
      use strict;
      use warnings;
 
@@ -604,7 +659,7 @@ EXAMPLE18
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-EXAMPLE19
+EXAMPLE21
      use strict;
      use warnings;
 
@@ -646,7 +701,7 @@ EXAMPLE19
      # Output like:
      # ok
 
-EXAMPLE20
+EXAMPLE22
      use strict;
      use warnings;
 
@@ -688,7 +743,7 @@ EXAMPLE20
      # Output like:
      # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-EXAMPLE21
+EXAMPLE23
      use strict;
      use warnings;
 
@@ -705,7 +760,7 @@ EXAMPLE21
      # Output:
      # ok
 
-EXAMPLE22
+EXAMPLE24
      use strict;
      use warnings;
 
@@ -725,7 +780,7 @@ EXAMPLE22
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-EXAMPLE23
+EXAMPLE25
      use strict;
      use warnings;
 
@@ -742,7 +797,7 @@ EXAMPLE23
      # Output:
      # ok
 
-EXAMPLE24
+EXAMPLE26
      use strict;
      use warnings;
 
@@ -762,7 +817,7 @@ EXAMPLE24
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' is required.
 
-EXAMPLE25
+EXAMPLE27
      use strict;
      use warnings;
 
@@ -779,7 +834,7 @@ EXAMPLE25
      # Output:
      # ok
 
-EXAMPLE26
+EXAMPLE28
      use strict;
      use warnings;
 
@@ -799,7 +854,7 @@ EXAMPLE26
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-EXAMPLE27
+EXAMPLE29
      use strict;
      use warnings;
 
@@ -816,7 +871,7 @@ EXAMPLE27
      # Output:
      # ok
 
-EXAMPLE28
+EXAMPLE30
      use strict;
      use warnings;
 
