@@ -11,8 +11,8 @@ use Scalar::Util qw(blessed);
 
 Readonly::Array our @EXPORT_OK => qw(check_angle check_array check_array_object
 	check_array_required check_bool check_code check_isa check_length
-	check_number check_number_of_items check_regexp check_required
-	check_string_begin check_strings);
+	check_length_fix check_number check_number_of_items check_regexp
+	check_required check_string_begin check_strings);
 
 our $VERSION = 0.22;
 
@@ -131,6 +131,20 @@ sub check_length {
 
 	if (length $self->{$key} > $max_length) {
 		err "Parameter '$key' has length greater than '$max_length'.",
+			'Value', $self->{$key},
+		;
+	}
+
+	return;
+}
+
+sub check_length_fix {
+	my ($self, $key, $length) = @_;
+
+	_check_key($self, $key) && return;
+
+	if (length $self->{$key} != $length) {
+		err "Parameter '$key' has length different than '$length'.",
 			'Value', $self->{$key},
 		;
 	}
@@ -301,6 +315,7 @@ Mo::utils - Mo utilities.
  check_code($self, $key);
  check_isa($self, $key, $class);
  check_length($self, $key, $max_length);
+ check_length_fix($self, $key, $length);
  check_number($self, $key);
  check_number_of_items($self, $list_method, $item_method, $object_name, $item_name);
  check_regexp($self, $key, $regexp);
@@ -408,6 +423,18 @@ I<Since version 0.04. Described functionality since version 0.05.>
 
 Check length of value for parameter defined by C<$key>. Maximum length is
 defined by C<$max_length>.
+
+Put error if check isn't ok.
+
+Returns undef.
+
+=head2 C<check_length_fix>
+
+ check_length_fix($self, $key, $length);
+
+I<Since version 0.22.>
+
+Check fixed length of value for parameter defined by C<$key>. Length is defined by C<$length> variable.
 
 Put error if check isn't ok.
 
@@ -533,6 +560,10 @@ Returns undef.
 
  check_length():
          Parameter '%s' has length greater than '%s'.
+                 Value: %s
+
+ check_length_fix():
+         Parameter '%s' has length different than '%s'.
                  Value: %s
 
  check_number():
@@ -918,6 +949,50 @@ Returns undef.
 
 =head1 EXAMPLE17
 
+=for comment filename=check_length_fix_ok.pl
+
+ use strict;
+ use warnings;
+
+ $Error::Pure::TYPE = 'Error';
+
+ use Mo::utils qw(check_length_fix);
+
+ my $self = {
+         'key' => 'foo',
+ };
+ check_length_fix($self, 'key', 3);
+
+ # Print out.
+ print "ok\n";
+
+ # Output like:
+ # ok
+
+=head1 EXAMPLE18
+
+=for comment filename=check_length_fix_fail.pl
+
+ use strict;
+ use warnings;
+
+ $Error::Pure::TYPE = 'Error';
+
+ use Mo::utils qw(check_length_fix);
+
+ my $self = {
+         'key' => 'foo',
+ };
+ check_length_fix($self, 'key', 4);
+
+ # Print out.
+ print "ok\n";
+
+ # Output like:
+ # #Error [...utils.pm:?] Parameter 'key' has length different than '4'.
+
+=head1 EXAMPLE19
+
 =for comment filename=check_number_ok.pl
 
  use strict;
@@ -936,7 +1011,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE18
+=head1 EXAMPLE20
 
 =for comment filename=check_number_fail.pl
 
@@ -958,7 +1033,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-=head1 EXAMPLE19
+=head1 EXAMPLE21
 
 =for comment filename=check_number_of_items_ok.pl
 
@@ -1003,7 +1078,7 @@ Returns undef.
  # Output like:
  # ok
 
-=head1 EXAMPLE20
+=head1 EXAMPLE22
 
 =for comment filename=check_number_of_items_fail.pl
 
@@ -1048,7 +1123,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-=head1 EXAMPLE21
+=head1 EXAMPLE23
 
 =for comment filename=check_regexp_ok.pl
 
@@ -1068,7 +1143,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE22
+=head1 EXAMPLE24
 
 =for comment filename=check_regexp_fail.pl
 
@@ -1091,7 +1166,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-=head1 EXAMPLE23
+=head1 EXAMPLE25
 
 =for comment filename=check_required_ok.pl
 
@@ -1111,7 +1186,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE24
+=head1 EXAMPLE26
 
 =for comment filename=check_required_fail.pl
 
@@ -1134,7 +1209,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' is required.
 
-=head1 EXAMPLE25
+=head1 EXAMPLE27
 
 =for comment filename=check_string_begin_ok.pl
 
@@ -1154,7 +1229,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE26
+=head1 EXAMPLE28
 
 =for comment filename=check_string_begin_fail.pl
 
@@ -1177,7 +1252,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-=head1 EXAMPLE27
+=head1 EXAMPLE29
 
 =for comment filename=check_strings_ok.pl
 
@@ -1197,7 +1272,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE28
+=head1 EXAMPLE30
 
 =for comment filename=check_strings_fail.pl
 
