@@ -1,4 +1,5 @@
 0.22
+ - Add check_length_fix().
  - Add information about module version for checks in doc.
 
 0.21 2024-02-03T11:53:31+01:00
